Added facsimile downloading to the Notebook

--- a/notebook/Slow Programming & Close Reading.ipynb
+++ b/notebook/Slow Programming & Close Reading.ipynb
@@ -34,17 +34,64 @@
     "\n",
     "Right after laying down those rules I realized that if I want to hold myself to the meticulous precise registration of process I should not transform the 'raw' text by using a text processor (that is: changing the representation by typing and editing the text file), because such requires interpretation and all interpretative acts should be modeled or captured in code. So, I can't change the source file I will be using. Two observations now arise…\n",
     "\n",
-    "The firs is that this file in itself is the result of downloading an edition of the text of the Middledutch Reynaert, and OCR'ing using tesseract "
+    "The first is that this file in itself is the result of downloading an edition of the text of the Middledutch Reynaert, and OCR'ing using tesseract. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\\marginpar{ JZ_20160512_1002: refer to the script and the edition } OCR isn't perfect, but it gives us the glyphs of the edition at least, from this we'll build the edition of the edition. But this should not be a digital metaphor of the book. For that the PDF used (open source downloadable here \\marginpar{ JZ_20160512_1005: REF } is available, and probably good enough. Here we are interestd in the question, what is a text when it is transfered (or read?) by code (or as code?). This is where we could leave off actually. We could say: this is what current computer technology can do, that is: guessing at the glyphs. That's as far as computer science understands text. Or rather we should contend that that is a form and an amount of human knowledge about text that has been computerly expressed. However we can use computer language to upgrade that understanding of the text, by transfering my knowledge about it to computer code.\n",
+    "\n",
+    "It is important in my view that this code is executable computer code. It should express if not possible *all*, at least *as many as possible* of my interpretative and transformative acts. With XML a lot if not most of my scholarly effort, actions, and performance goes unregistered. Between the manuscript and the TEI tag <p> there is a considerable series of scholarly actions that get lost. The aim here is to try to see how much of that scholarly performance can actually be captured in code.\n",
+    "\n",
+    "Obviously the tasks and actions related to getting to the manuscript and digitally photographing it can not be captured in this notebook. Both because computers are severely handicapt for performing such actions—there is a long way to go before computers are actually that useful—and because of time and economic constraints. The ressults of such scholarly actions are luckily however in the invaluable care of the Württembergische Landesbibliothek Stuttgart (http://www.wlb-stuttgart.de/), and we can emulate 'going to the library and getting the source' by using the online facsimile bank of the Württembergische Landesbibliothek. This we can do with the following little script."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "require 'open-uri'\n",
+    "\n",
+    "# The maximum zoom level images are statically available from this URL:\n",
+    "# http://digital.wlb-stuttgart.de/filegroups/combha-m_323970265/max/\n",
+    "# The folios 192v-213r coincide with the JPGs 00000388.jpg-00000429.jpg\n",
+    "base_url = \"http://digital.wlb-stuttgart.de/filegroups/combha-m_323970265/max/\"\n",
+    "\n",
+    "side = \"r\"\n",
+    "folio_number = 192 #429\n",
+    "(388..429).each do |jpgn|\n",
+    "\n",
+    "  # Instead of jpg order numbers let's add folio numbering to add a bit of\n",
+    "  # scholarly atmosphere.\n",
+    "  if side.eql?(\"v\")\n",
+    "    side=\"r\"\n",
+    "    folio_number += 1\n",
+    "  else\n",
+    "    side=\"v\"\n",
+    "  end\n",
+    "\n",
+    "  folio_name = \"#{jpgn}_#{folio_number}#{side}.jpg\"\n",
+    "  puts \"Dowloading #{format(\"%08d\",jpgn)}.jpg => #{folio_name}\"\n",
+    "  open( \"./folios_as_jpgs/#{folio_name}\", \"wb\" ) do |file|\n",
+    "     file << open( \"#{base_url}#{format(\"%08d\",jpgn)}.jpg\" ).read\n",
+    "  end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apart from taking the reader to the library yourself, I don't think we can get the reader/user closer to the source we want to clarify for her"
+   ]
   }
  ],
  "metadata": {
