--- a/notebook/01  Slow Programming & Close Reading.ipynb
+++ b/notebook/01  Slow Programming & Close Reading.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
        "true"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,70 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dowloading 00000388.jpg => 388_192v.jpg\n",
-      "Dowloading 00000389.jpg => 389_193r.jpg\n",
-      "Dowloading 00000390.jpg => 390_193v.jpg\n",
-      "Dowloading 00000391.jpg => 391_194r.jpg\n",
-      "Dowloading 00000392.jpg => 392_194v.jpg\n",
-      "Dowloading 00000393.jpg => 393_195r.jpg\n",
-      "Dowloading 00000394.jpg => 394_195v.jpg\n",
-      "Dowloading 00000395.jpg => 395_196r.jpg\n",
-      "Dowloading 00000396.jpg => 396_196v.jpg\n",
-      "Dowloading 00000397.jpg => 397_197r.jpg\n",
-      "Dowloading 00000398.jpg => 398_197v.jpg\n",
-      "Dowloading 00000399.jpg => 399_198r.jpg\n",
-      "Dowloading 00000400.jpg => 400_198v.jpg\n",
-      "Dowloading 00000401.jpg => 401_199r.jpg\n",
-      "Dowloading 00000402.jpg => 402_199v.jpg\n",
-      "Dowloading 00000403.jpg => 403_200r.jpg\n",
-      "Dowloading 00000404.jpg => 404_200v.jpg\n",
-      "Dowloading 00000405.jpg => 405_201r.jpg\n",
-      "Dowloading 00000406.jpg => 406_201v.jpg\n",
-      "Dowloading 00000407.jpg => 407_202r.jpg\n",
-      "Dowloading 00000408.jpg => 408_202v.jpg\n",
-      "Dowloading 00000409.jpg => 409_203r.jpg\n",
-      "Dowloading 00000410.jpg => 410_203v.jpg\n",
-      "Dowloading 00000411.jpg => 411_204r.jpg\n",
-      "Dowloading 00000412.jpg => 412_204v.jpg\n",
-      "Dowloading 00000413.jpg => 413_205r.jpg\n",
-      "Dowloading 00000414.jpg => 414_205v.jpg\n",
-      "Dowloading 00000415.jpg => 415_206r.jpg\n",
-      "Dowloading 00000416.jpg => 416_206v.jpg\n",
-      "Dowloading 00000417.jpg => 417_207r.jpg\n",
-      "Dowloading 00000418.jpg => 418_207v.jpg\n",
-      "Dowloading 00000419.jpg => 419_208r.jpg\n",
-      "Dowloading 00000420.jpg => 420_208v.jpg\n",
-      "Dowloading 00000421.jpg => 421_209r.jpg\n",
-      "Dowloading 00000422.jpg => 422_209v.jpg\n",
-      "Dowloading 00000423.jpg => 423_210r.jpg\n",
-      "Dowloading 00000424.jpg => 424_210v.jpg\n",
-      "Dowloading 00000425.jpg => 425_211r.jpg\n",
-      "Dowloading 00000426.jpg => 426_211v.jpg\n",
-      "Dowloading 00000427.jpg => 427_212r.jpg\n",
-      "Dowloading 00000428.jpg => 428_212v.jpg\n",
-      "Dowloading 00000429.jpg => 429_213r.jpg\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "388..429"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The maximum zoom level images are statically available from this URL:\n",
     "# http://digital.wlb-stuttgart.de/filegroups/combha-m_323970265/max/\n",
@@ -242,22 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#<File:./resources/340003.pdf (closed)>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "open( \"./resources/340003.pdf\", \"wb\" ) do |file|\n",
     "   file << open( \"http://www.oapen.org/download?type=document&docid=340003\" ).read\n",
@@ -273,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +221,7 @@
        "42..58"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -437,7 +367,33 @@
    "source": [
     "There, we have a transcription. We see a page number, some line numbers, Middle Dutch text, English footnotes, a header and page numbers of the next page. OCR isn't perfect—as is demonstrated by the number 10 being recognized rather as one and small letter O. However, it gives us the glyphs of the edition at least. \n",
     "\n",
-    "From this material we shall build the computational edition of the scholarly edition. But this should not be a digital metaphor of the book. For that the PDF that was downloaded is available, and probably that is good enough for my uses as a reader. This is a point where we could leave off actually. We could say: this is what current computer technology can do, that is: guessing at the glyphs. That's as far as computer science understands text. Or rather we should contend that that is a form and an amount of human knowledge about text that has been computerly expressed. However we can use computer language to upgrade that understanding of the text, by transferring my knowledge about it to computer code. Here we are interested in what it means to transfer the text and knowledge about it to code. What it means to closely read it through code. Maybe even what it means to read text as code? "
+    "From this material we shall build the computational edition of the scholarly edition. But this should not be a digital metaphor of the book. For that the PDF that was downloaded is available, and probably that is good enough for my uses as a reader. This is a point where we could leave off actually. We could say: this is what current computer technology can do, that is: guessing at the glyphs. That's as far as computer science understands text. Or rather we should contend that that is a form and an amount of human knowledge about text that has been computerly expressed. However we can use computer language to upgrade that understanding of the text, by transferring my knowledge about it to computer code. Here we are interested in what it means to transfer the text and knowledge about it to code. What it means to closely read it through code. Maybe even what it means to read text as code? \n",
+    "\n",
+    "To explore this we need to take our code reading of the text further. Making sure that we capture each and every step of the process in code. In the next chapter we will 'clean up' our transcription, making sure we have the actual Middle Dutch text. We then proceed to reading the text through code.\n",
+    "\n",
+    "Oh.. but let's not forget to write our text to a file, so we can actually reuse it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27658"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "File.open( \"./resources/Bouwman_ Of Reynaert the Fox.txt\", 'w') {|file| file.write( text ) }"
    ]
   },
   {
